tests/valid/test_record_12.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer x, Buffer y, int[] ys):
     if:
        x.data == y.data
        x.wp == 0
     then:
        x == y{wp:=0}
