tests/invalid/test_043.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer x, Buffer y, bool[] ys):
     if:
         x == y{none:=ys}
         y.wp >= 0
     then:
         x.wp >= 0

